--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -27,6 +27,11 @@
     "typescript": "^5.0.0",
     "vitest": "^1.3.1"
   },
+  "overrides": {
+    "vite": {
+      "rollup": "npm:@rollup/wasm-node"
+    }
+  },
   "publishConfig": {
     "access": "public"
   }
