Revert "fix use npm:@rollup/wasm-node package"
This reverts commit 09bb91e199fa4d0cae1e0c4fb30cdd8acb099989.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,10 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Clean up
+        run: |
+          rm -f package-lock.json
+
       - name: Install dependencies
         run: npm install
 
