setup formatter of biome
And package-lock.json update (0.1.2 -> 0.2.0)

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     ],
     "scripts": {
       "build": "npm run build --workspaces",
-      "test": "npm run test --workspaces"
+      "test": "npm run test --workspaces",
+      "fmt": "npm run fmt --workspaces"
     }
   }
   
