--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "scripts": {
       "build": "npm run build --workspaces",
       "test": "npm run test --workspaces",
-      "fmt": "npm run fmt --workspaces"
+      "fmt": "npm run fmt --workspaces",
+      "fmt:check": "npm run fmt:check --workspaces",
+      "lint": "npm run lint --workspaces"
     }
   }
   
