update linter setting (add noUnusedTemplateLiteral)

--- a/packages/core/biome.json
+++ b/packages/core/biome.json
@@ -23,7 +23,8 @@
         "noInferrableTypes": "off",
         "noNonNullAssertion": "off",
         "useTemplate": "off",
-        "noUselessElse": "off"
+        "noUselessElse": "off",
+        "noUnusedTemplateLiteral": "off"
       }
     }
   },
