--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -21,6 +21,7 @@
   "author": "shinshin86 (https://github.com/shinshin86)",
   "license": "MIT",
   "dependencies": {
+    "@aituber-onair/chat": "^0.1.0",
     "@aituber-onair/voice": "^0.3.0"
   },
   "peerDependencies": {
