ci: add chat package to build order after initial publication
- Add @aituber-onair/chat to build pipeline in both ci.yml and release.yml
- Chat package v0.1.0 has been published to npm
- Ensures proper build order: chat -> voice -> core

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Build packages in dependency order
         run: |
+          npm -w @aituber-onair/chat run build
           npm -w @aituber-onair/voice run build
           npm -w @aituber-onair/core run build
 
