--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "devDependencies": {
         "@changesets/changelog-github": "^0.5.1",
         "@changesets/cli": "^2.29.5",
+        "react": "^19.0.0",
+        "react-dom": "^19.0.0",
         "typescript": "^5.8.3",
         "typescript-language-server": "^4.3.4"
     }
