chore(chat): rename compat scripts to openai-compatible

--- a/packages/chat/package.json
+++ b/packages/chat/package.json
@@ -26,8 +26,8 @@
     "test": "npm run typecheck && vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
-    "compat:probe": "node examples/compat-probe/index.js",
-    "compat:mock-server": "node examples/mock-openai-server/server.js",
+    "openai-compatible:probe": "node examples/compat-probe/index.js",
+    "openai-compatible:mock-server": "node examples/mock-openai-server/server.js",
     "fmt": "biome format . --write",
     "fmt:check": "biome format .",
     "lint": "biome lint .",
