--- a/skills/add-chat-model/agents/openai.yaml
+++ b/skills/add-chat-model/agents/openai.yaml
@@ -1,4 +1,4 @@
 interface:
   display_name: "Add Chat Model"
-  short_description: "Add model support and prepare chat release updates"
-  default_prompt: "Use $add-chat-model to add a provider model across constants, provider, tests, examples, docs, and release-prep version files."
+  short_description: "Add model support and prep chat->core handoff"
+  default_prompt: "Use $add-chat-model to add a provider model in chat, then ask whether to run $sync-core-after-chat-upgrade."
